--- a/styles/architects.css
+++ b/styles/architects.css
@@ -5,3 +5,125 @@
   font-weight: 400;
   font-style: normal;
 }
+ 
+/* shared style */
+.display-flex{
+    display: flex;
+}
+.tex-primary{
+    color: #FF900E;
+}
+/* dark02 */
+.text-gray{
+    color: #424242;
+}
+/* dark03 */
+.text-light-gray{
+    color: #727272;
+
+}
+.bg-light{
+    background-color: rgb(255, 144, 14,0.1);
+}
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main> section{
+    margin-top: 110px;
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+
+/* header style */
+
+/* navbar related style */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+
+}
+.brand{
+    font-weight: 700;
+    font-size: 2rem;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+.navbar, .banner{
+    max-width: 950px;
+    margin: 0 auto;
+}
+.banner-content{
+    max-width: 1440px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 500;
+    font-size: 3rem;
+} 
+.banner-image{
+    width: 100%;
+
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+/* team and feature related style */
+.teams{
+    align-items: center;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+.our-features{
+    margin-left: 120px;
+    max-width: 530px;
+}
+/* responsive media query */
+@media screen and(max-width:576px){
+    .navbar, .nav-links, .teams{
+    flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+    
+}
+/* medium size device */
+@media screen and(min-width:576px)and(max-width:992px){
+    .teams{
+        flex-direction: column;
+        .our-features{
+            margin-left: 20px auto;
+        }
+    }
+
+}
