added features card and image work in progres

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -104,6 +104,25 @@ main> section{
     margin-left: 120px;
     max-width: 530px;
 }
+/* features section related style */
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+ border-left: 5px solid #FF900E;
+ padding-left: 20px;
+ }
+ .feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+ }
+ .feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+  
+ }
 /* some facts related styles */
 .facts-container{
     display: grid;
