added expxperience badge and made atured section responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -121,7 +121,23 @@ main> section{
  .feature-card .feature-title{
     font-weight: 600;
     font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
   
+ }
+ #experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+ }
+ .feature-architect img{
+    width: 100%;
+ }
+ #experience-year{
+    font-size: 4rem;
+    font-weight: 700;
  }
 /* some facts related styles */
 .facts-container{
@@ -167,7 +183,10 @@ main> section{
 }
 /* responsive media query */
 @media screen and(max-width:576px){
-    .navbar, .nav-links, .teams{
+    .navbar,
+     .nav-links, 
+     .features,
+     .teams{
     flex-direction: column;
     }
     .team-img-container,
@@ -191,7 +210,7 @@ main> section{
 
 /* medium size  device */
 @media screen and(min-width:576px)and(max-width:992px){
-    .teams{
+    .teams,.features{
         flex-direction: column;
     }
         .our-features{
@@ -202,6 +221,11 @@ main> section{
             gap: 50px;
             justify-items: center;
         }
+        #experience-badge{
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        
     }
     
 
